--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
+.container{
+    display: block;
+    margin: 0 auto;
+    max-width: 600px;
+    
+}
 header{
     display: flex;
     justify-content: space-between;
