--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,38 @@
-
 <header>
   <div class="logo">
-   <a href="/"> <img class="brand" src="../assets/images/Blue_computer_icon.svg.png"/></a>
+    <a href="/">
+      <img class="brand" src="../assets/images/Blue_computer_icon.svg.png"
+    /></a>
   </div>
 
-  <h2 class="title"><a href="/">{{title}}</a></h2>
+  <h2 class="title">
+    <a href="/">{{ title }}</a>
+  </h2>
 </header>
 
-<div class="container"> 
-
-  
+<div class="container">
   <!-- form for adding link  -->
-  <form class="link-form">   
+  <form class="link-form">
     <h2>Add link</h2>
-    
-    <div class="field"> 
+
+    <div class="field">
       <label for="title">Title:</label>
-      <input name="title" id="title" type="text" #newTitle>
+      <input name="title" id="title" type="text" #newTitle />
     </div>
     <div class="field">
-      <label for="link" >Link:</label>
-      <input type="text" id="link" name="link" #newLink/>
+      <label for="link">Link:</label>
+      <input type="text" id="link" name="link" #newLink />
     </div>
-    
-    <button class="add-btn" (click)="addArticle(newTitle, newLink)">Submit Link </button>
+
+    <button class="add-btn" (click)="addArticle(newTitle, newLink)">
+      Submit Link
+    </button>
   </form>
-  
+
   <!-- form end here -->
-  
-  
-  <app-article></app-article>
+
+  <div class="articles">
+    <app-article></app-article>
+  </div>
 </div>
 <router-outlet></router-outlet>
