--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,10 @@
   <!-- form end here -->
 
   <div class="articles">
-    <app-article></app-article>
+    <app-article
+      *ngFor="let article of articles"
+      [article]="article"
+    ></app-article>
   </div>
 </div>
 <router-outlet></router-outlet>
