--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -1,7 +1,7 @@
 .article {
   margin: 10px 5px;
   display: flex;
-  height: 200px;
+  height: 150px;
 }
 .article .left-section {
   flex-basis: 30%;
@@ -48,7 +48,8 @@
   align-items: center;
   height: fit-content;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
+  /* color: rgb(5, 198, 252); */
   padding-bottom: 10px;
 }
 .article .votes .up-vote:hover,
