added sorting funciton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 
   <div class="articles">
     <app-article
-      *ngFor="let article of articles"
+      *ngFor="let article of sortArticles()"
       [article]="article"
     ></app-article>
   </div>
